# eloquent-test

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  DESIGN-GUIDE.md  Makefile  docker-compose.prod.yml  docker-compose.yml
.github/: auto-merge.yml  dependabot.yml
.github/workflows/: backend-ci.yml  deploy-dev.yml  deploy-prod.yml  frontend-ci.yml  integration-tests.yml  security.yml
backend/: .dockerignore  .env.example  .env.production.example  .flake8  Dockerfile  Dockerfile.optimized  README.md  alembic.ini  gunicorn.conf.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/dependencies/: __init__.py  auth.py  common.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: auth.py  chat.py  users.py  webhooks.py
backend/app/core/: __init__.py  config.py  exceptions.py  monitoring.py  performance.py  resilience.py  security.py  security_config.py  websocket.py
backend/app/integrations/: __init__.py  claude_client.py  pinecone_client.py  redis_client.py  secrets_manager.py
backend/app/middleware/: rate_limiting.py
backend/app/models/: __init__.py  base.py  chat.py  message.py  user.py
backend/app/repositories/: __init__.py  chat_repository.py  message_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  hybrid_search_service.py  rag_service.py  response_cache_service.py  streaming_service.py
backend/app/tests/: conftest.py  test_hybrid_search_service.py  test_hybrid_search_validation.py  test_pinecone_client.py  test_rag_integration.py  test_rag_service.py  test_resilience.py
docs/ai-context/: best-practices-ui-orchestration.md  deployment-infrastructure.md  docs-overview.md  orchestrator-task-framework.md  project-structure.md  system-integration.md
docs/deployment/: github-branch-protection.md  repository-configuration.md
frontend/: .dockerignore  .env.local.example  .eslintrc.json  .lighthouserc.js  .prettierignore  .prettierrc.json  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/profile/: page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/components/auth/: auth-guard.tsx  auth-loading.tsx  auth-test.tsx  migration-banner.tsx  mobile-auth-banner.tsx
frontend/components/chat/: chat-header.tsx  chat-interface.tsx  chat-sidebar.tsx  collapsible-sidebar.tsx  message-bubble.tsx  message-input.tsx  message-list.tsx  message-renderer.tsx  mobile-sidebar.tsx  thinking-indicator.tsx  typewriter-text.tsx
frontend/components/chat/__tests__/: use-sidebar.test.ts
frontend/components/layout/: header.tsx
frontend/components/providers/: auth-provider.tsx  providers.tsx  socket-provider.tsx  theme-provider.tsx
frontend/components/ui/: alert.tsx  button.tsx  card.tsx  dropdown-menu.tsx  gradient-showcase.tsx  input.tsx  loading-spinner.tsx  navigation.tsx  textarea.tsx  theme-toggle.tsx  toaster.tsx  tooltip.tsx
frontend/hooks/: use-api-client.ts  use-auth-migration.ts  use-chat-manager.ts  use-chat.ts  use-sidebar.ts
frontend/lib/: api-client.ts  api.ts  utils.ts
frontend/public/: manifest.json
frontend/types/: chat.ts  design-tokens.ts  sidebar.ts
nginx/: nginx.conf  nginx.prod.conf
terraform/: deploy.sh  main.tf  outputs.tf  variables.tf
terraform/environments/: production.tfvars  staging.tfvars
terraform/modules/api_gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/app_runner/: main.tf  outputs.tf  variables.tf
terraform/modules/elasticache/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
