[tool.poetry]
name = "eloquentai-backend"
version = "0.1.0"
description = "FastAPI backend for Eloquent AI chatbot with RAG pipeline"
authors = ["Eloquent AI Team <dev@eloquentai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
gunicorn = "^23.0.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
email-validator = "^2.2.0"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
redis = "^6.4.0"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
celery = "^5.3.4"
websockets = "^15.0"
anthropic = "^0.34.0"
pinecone-client = "^6.0.0"
python-dotenv = "^1.0.0"
structlog = "^25.4.0"
tiktoken = "^0.11.0"
prometheus-client = "^0.19.0"
slowapi = "^0.1.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
greenlet = "^3.2.4"
pytest = "^8.4.1"
numpy = "^2.3.2"
jose = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
vcrpy = "^7.0.0"
mypy = "^1.11.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = false
ignore_missing_imports = true
warn_redundant_casts = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "app.api.*",
    "app.tests.*",
    "celery.*",
    "redis.*",
    "pinecone.*",
    "anthropic.*"
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --disable-warnings"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests"
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]
